--- a/src/main/webapp/resources/css/agrocom.css
+++ b/src/main/webapp/resources/css/agrocom.css
@@ -1,7 +1,12 @@
+#body {
+    min-height: 100%;
+}
+
 .footer {
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
     width: 100%;
+    margin-top: 20px;
     height: 60px;
     background: rgba(10, 6, 14, 0.70);
 }
